mail/traefik-tcp-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: mail
  name: postfix-submission
spec:
  entryPoints:
    - submission
  routes:
    - match: HostSNI(`*`)
      services:
        - name: postfix-tls
          port: 587
          proxyProtocol:
            version: 2
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: mail
  name: dovecot-imaps
spec:
  entryPoints:
    - imaps
  routes:
    - match: HostSNI(`*`)
      services:
        - name: dovecot-tls
          port: 993
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  namespace: mail
  name: dovecot-managesieve
spec:
  entryPoints:
    - managesieve
  routes:
    - match: HostSNI(`*`)
      services:
        - name: dovecot-managesieve
          port: 4190
